# sweet

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
resources/: compile_qrc.py  sweet-rc.qrc
rezplugins/live_resolve/: sweet.py
src/sweet/: __init__.py  _entry_points.py  _logging.py  _rezapi.py  _version.py  cli.py  constants.py  control.py  core.py  exceptions.py  lib.py  preference.py  report.py  signals.py  util.py  view.py
src/sweet/cli/: __init__.py
src/sweet/common/: __init__.py
src/sweet/gui/: app.py  completer.py  control.py  delegates.py  models.py  pages.py  preference.py  resources.py  style.py  sweet.qss  util.py  view.py  widgets.py  window.py
src/sweet/gui/_vendor/: qoverview.py
src/sweet/gui/common/: view.py
src/sweet/gui/resources/: compile_qrc.py  icon_viewer.py  sweet-rc.qrc  sweet.qss
src/sweet/gui/solve/: view.py
src/sweet/gui/sphere/: view.py
src/sweet/gui/suite/: model.py  view.py
src/sweet/gui2/: app.py  completer.py  control.py  delegates.py  models.py  pages.py  view.py  widgets.py  window.py
src/sweet/gui2/_vendor/: Qt5.py  qjsonmodel.py
src/sweet/gui2/resources/: sweet.qss
src/sweet/resources/: sweet.qss
src/sweet/rezplugins/application/: rezconfig.py  sweet.py
src/sweet/rezplugins/command/: rezconfig.py  sweet.py
src/sweet/search/: model.py
src/sweet/solve/: model.py
src/sweet/suite/: model.py  view.py
sweet/: __main__.py  _rezapi.py  allzparkconfig.py  app.py  cli.py  control.py  lib.py  preference.py  resources.py  rezconfig.py  sweetconfig.py  util.py  version.py  view.py
sweet/common/: __init__.py  delegate.py  model.py  view.py
sweet/resources/: style.qss  sweet.qss
sweet/rezplugins/build_system/: sweet.py  sweety.py
sweet/rezplugins/package_repository/: __init__.py  mongozark.py
sweet/search/: __main__.py  model.py  view.py
sweet/solve/: model.py  view.py
sweet/sphere/: __init__.py  __main__.py  model.py  view.py
sweet/suite/: model.py  view.py
tests/: test_core.py  test_gui.py  util.py
