[metadata]
name = rez-sweet
version = attr: sweet._version.__version__
description = Rez suite composing GUI tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidlatwe/sweet
author = davidlatwe
author_email = davidlatwe@gmail.com
maintainer = davidlatwe
maintainer_email = davidlatwe@gmail.com
license = LGPLv3
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
    Topic :: Software Development
    Topic :: System :: Software Distribution
keywords = package resolve version build install software management
project_urls =
    Source=https://github.com/davidlatwe/sweet
    Tracker=https://github.com/davidlatwe/sweet/issues

[options]
zip_safe = true
python_requires = >=3, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
install_requires =
packages = find:
package_dir =
    = src
include_package_data = true

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    rez-sweet = sweet.rezplugins.command.sweet:rez_cli

[options.package_data]
sweet =
    resources/*.qss
    resources/images/*.svg
    resources/images/*.png
    resources/fonts/*/*.ttf
    resources/fonts/*/*LICENSE*

[options.extras_require]
gui =
    pyside2
tests =
    pytest

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[tool:pytest]
env =
    PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
    PYTHONIOENCODING=utf-8
